@startuml

title __SERVICE's Class Diagram__\n

  package com.epam.training {
    package com.epam.training.revision {
      package com.epam.training.revision.service {
        class RevisionSchedulingService {
            {static} - log : Logger
            + RevisionSchedulingService()
            - makeComputationAndLogResult()
        }
      }
    }
  }
  

  package com.epam.training {
    package com.epam.training.revision {
      package com.epam.training.revision.service {
        class RevisionService {
            + RevisionService()
            + sumOfRevisionsFromTimestamp()
            + revisionFromToStringYyyyMmDd()
            + revisionFromToTimestamp()
        }
      }
    }
  }
  

  RevisionSchedulingService o-- RevisionService : revisionService
  RevisionService o-- RevisionRepository : revisionRepository
  RevisionService o-- OrderRepository : orderRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
